@@ -1,0 +1,9 @@
+package modules.node.repository;
+
+moduleinterface repository
+{
+}
+
+simple base_repository like repository
+{
+}
