@@ -3,3 +3,4 @@
 ####################################
 - In include/lru_cache.h, lru_pos.cost is renamed in lru_pos.price
 - In lru_cache.lru and lru_cache.mru have been renamed into lru_cache.lru_ and lru_cache.mru_
+- Each object can have different representations. Useful when dealing with videos, for example, that can be encoded at different bit-rates and resolutions (see modifications in include/ccnsim.h)
